[SYNCOPE-1804] Full support and integration tests for Neo4j